fix for broken styles

--- a/assets/styles/layout/default.styl
+++ b/assets/styles/layout/default.styl
@@ -32,18 +32,17 @@ header
 //   &.container
 //     max-height 0
 
-.container
-  &.ng-scope
-    position absolute
+.mainView
+  position absolute
 
-    top 5rem
-    right 0
-    bottom 2rem
-    left 0
+  top 5rem
+  right 0
+  bottom 2rem
+  left 0
 
-    overflow auto
+  overflow auto
 
-    padding 1rem 1rem 0 ( sidebar-width + 1rem )
+  padding 1rem 1rem 0 ( sidebar-width + 1rem )
 
   h1
     font-size 1.25rem
